--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "^13.0.0",
     "postcss": "^8.5.6",
     "react": "^18.0.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.0"
   },
@@ -20,5 +21,6 @@
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
     "typescript": "^5.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
